Fix size comments and make sidebar appear on narrower screens

--- a/wp-content/themes/ehg2/src/css/_variables.scss
+++ b/wp-content/themes/ehg2/src/css/_variables.scss
@@ -13,8 +13,8 @@ $larger-font-size: 48rem;
 
 $narrow-single-column: 28rem; // ~450px
 $menu-size-cutoff: 37.5rem;
-$content-width: 60rem; // ~768px
-$sidebar-width: 80rem; // ~960px
+$content-width: 60rem; // ~960px
+$sidebar-width: 65rem; // ~1040px
 
 // Responsive Mixins
 // =================================================
